// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 200px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c10:hover,
.c10:focus {
  background: #B29DFF;
}

.c10:active {
  background: #C5B6FF;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c7 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c7 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c7 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c7 .react-select__control:hover,
.c7 .react-select__control:focus,
.c7 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c7 .react-select__control:hover .react-select__dropdown-indicator,
.c7 .react-select__control:focus .react-select__dropdown-indicator,
.c7 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c7 .react-select__control .react-select__indicator:hover,
.c7 .react-select__control .react-select__dropdown-indicator:hover,
.c7 .react-select__control .react-select__indicator:focus,
.c7 .react-select__control .react-select__dropdown-indicator:focus,
.c7 .react-select__control .react-select__indicator:active,
.c7 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c7 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c7 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c7 .react-select__single-value {
  color: #FFFFFF;
}

.c7 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c7 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c7 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c7 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c7 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c7 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c7 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c7 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c7 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c7 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c7 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c7 .react-select__clear-indicator:hover,
.c7 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c7 .react-select__clear-indicator:hover svg,
.c7 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c7 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c7 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c7 .react-select__indicator-separator {
  display: none;
}

.c7 .react-select__loading-indicator {
  display: none;
}

.c7 .react-select--is-disabled,
.c7 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c7 .react-select--is-disabled .react-select__single-value,
.c7 .react-select__control--is-disabled .react-select__single-value,
.c7 .react-select--is-disabled .react-select__placeholder,
.c7 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c7 .react-select--is-disabled .react-select__indicator,
.c7 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c9 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c9::placeholder {
  color: rgba(255,255,255,0.54);
}

.c9:hover,
.c9:focus,
.c9:active {
  border: 1px solid rgba(255,255,255,0.72);
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        loggedInUsername
         - add a review
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="danger"
      >
        server error
      </div>
      <div
        class="c5"
        width="200px"
      >
        <label
          class="c6"
          font-size="0"
          for="select"
        >
          Request Status
        </label>
        <div
          class="c7"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__placeholder css-1wa3eu0-placeholder"
                >
                  Choose status
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="select"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c8"
      >
        <label
          class="c6"
          font-size="0"
        >
          Message
        </label>
        <textarea
          class="c9"
          color="text.main"
          height="150px"
          placeholder="Optional message..."
          width="100%"
        />
      </div>
      <button
        class="c10"
        kind="primary"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c0 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c1 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 200px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c6 .react-select-container {
  box-sizing: border-box;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background-color: transparent;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c6 .react-select__control {
  outline: none;
  min-height: 40px;
  height: fit-content;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  background-color: transparent;
  box-shadow: none;
}

.c6 .react-select__control .react-select__dropdown-indicator {
  color: rgba(255,255,255,0.54);
}

.c6 .react-select__control:hover,
.c6 .react-select__control:focus,
.c6 .react-select__control:active {
  border: 1px solid rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c6 .react-select__control:hover .react-select__dropdown-indicator,
.c6 .react-select__control:focus .react-select__dropdown-indicator,
.c6 .react-select__control:active .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c6 .react-select__control .react-select__indicator:hover,
.c6 .react-select__control .react-select__dropdown-indicator:hover,
.c6 .react-select__control .react-select__indicator:focus,
.c6 .react-select__control .react-select__dropdown-indicator:focus,
.c6 .react-select__control .react-select__indicator:active,
.c6 .react-select__control .react-select__dropdown-indicator:active {
  color: #FFFFFF;
}

.c6 .react-select__control--is-focused {
  border-color: rgba(255,255,255,0.72);
  background-color: rgba(255,255,255,0.07);
  cursor: pointer;
}

.c6 .react-select__control--is-focused .react-select__dropdown-indicator {
  color: #FFFFFF;
}

.c6 .react-select__single-value {
  color: #FFFFFF;
}

.c6 .react-select__placeholder {
  color: rgba(255,255,255,0.54);
}

.c6 .react-select__multi-value {
  background-color: rgba(255,255,255,0.13);
}

.c6 .react-select__multi-value .react-select__multi-value__label {
  color: #FFFFFF;
  padding: 0 6px;
}

.c6 .react-select__multi-value .react-select__multi-value__remove {
  color: #FFFFFF;
}

.c6 .react-select__multi-value .react-select__multi-value__remove:hover {
  background-color: rgba(255,255,255,0.07);
  color: #FF6257;
}

.c6 .react-select__option:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c6 .react-select__option--is-focused {
  background-color: rgba(255,255,255,0.07);
}

.c6 .react-select__option--is-focused:hover {
  cursor: pointer;
  background-color: rgba(255,255,255,0.07);
}

.c6 .react-select__option--is-selected {
  background-color: rgba(255,255,255,0.13);
  color: inherit;
  font-weight: 500;
}

.c6 .react-select__option--is-selected:hover {
  background-color: rgba(255,255,255,0.13);
}

.c6 .react-select__clear-indicator {
  color: rgba(255,255,255,0.72);
}

.c6 .react-select__clear-indicator:hover,
.c6 .react-select__clear-indicator:focus {
  background-color: rgba(255,255,255,0.07);
}

.c6 .react-select__clear-indicator:hover svg,
.c6 .react-select__clear-indicator:focus svg {
  color: #FF6257;
}

.c6 .react-select__menu {
  margin-top: 0px;
  background-color: #344179;
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.c6 .react-select__menu .react-select__menu-list::-webkit-scrollbar-thumb {
  background: rgba(255,255,255,0.13);
  border-radius: 4px;
}

.c6 .react-select__indicator-separator {
  display: none;
}

.c6 .react-select__loading-indicator {
  display: none;
}

.c6 .react-select--is-disabled,
.c6 .react-select__control--is-disabled {
  color: rgba(255,255,255,0.36);
  border: 1px solid rgba(255,255,255,0.36);
}

.c6 .react-select--is-disabled .react-select__single-value,
.c6 .react-select__control--is-disabled .react-select__single-value,
.c6 .react-select--is-disabled .react-select__placeholder,
.c6 .react-select__control--is-disabled .react-select__placeholder {
  color: rgba(255,255,255,0.36);
}

.c6 .react-select--is-disabled .react-select__indicator,
.c6 .react-select__control--is-disabled .react-select__indicator {
  color: rgba(255,255,255,0.36);
}

.c8 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c8::placeholder {
  color: rgba(255,255,255,0.54);
}

.c8:hover,
.c8:focus,
.c8:active {
  border: 1px solid rgba(255,255,255,0.72);
}

<div>
  <div
    class="c0"
    style="position: relative;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        loggedInUsername
         - add a review
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        width="200px"
      >
        <label
          class="c5"
          font-size="0"
          for="select"
        >
          Request Status
        </label>
        <div
          class="c6"
        >
          <div
            class="react-select-container css-2b097c-container"
          >
            <div
              class="react-select__control css-yk16xz-control"
            >
              <div
                class="react-select__value-container css-g1d714-ValueContainer"
              >
                <div
                  class="react-select__placeholder css-1wa3eu0-placeholder"
                >
                  Choose status
                </div>
                <input
                  aria-autocomplete="list"
                  class="css-62g3xt-dummyInput"
                  id="select"
                  readonly=""
                  tabindex="0"
                  value=""
                />
              </div>
              <div
                class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-6q0nyr-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c7"
      >
        <label
          class="c5"
          font-size="0"
        >
          Message
        </label>
        <textarea
          class="c8"
          color="text.main"
          height="150px"
          placeholder="Optional message..."
          width="100%"
        />
      </div>
      <button
        class="c9"
        kind="primary"
      >
        Submit Review
      </button>
    </div>
  </div>
</div>
`;
